# qwen3-tts

./: .env.example  Dockerfile  README.md  bentofile.yaml  config.py  main.py  pyproject.toml  service.py  test_load.py
voices/default/: manifest.json
voices/german-test/: manifest.json
